# GATT-thermocouple

./: .gitignore  CMakeLists.txt  README.md  client.py  prj.conf
boards/: esp32c3_luatos_core.overlay
src/: main.c
